--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,8 +48,8 @@ build_script:
   - cd /home/appveyor/site
   - git config --global credential.helper store
   - printf "https://$GITHUB_ACCESS_TOKEN:x-oauth-basic@github.com\n" > $HOME/.git-credentials
-  - git config --global user.email "hi@puyo.xyz"
-  - git config --global user.name "puyoxyz"
+  - git config --global user.email "userabnormal89@gmail.com"
+  - git config --global user.name "AbnormalPoof"
   - cd /home/appveyor/src
   - haxelib run lime build html5
   - cd /home/appveyor/site
