--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ environment:
   HAXE_INSTALLDIR: /home/appveyor/haxe
   SRC_REPO: https://github.com/KadeDev/Kade-Engine.git
   GITHUB_ACCESS_TOKEN:
-    secure: /iJkmlKYPjeG0o1YoGSpn+NANPJMrCZ6dic5w/12wRiInp+y22kAAXsPkEwBJzHS
+    secure: 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
 
 install:
   - cd /home/appveyor/site
@@ -47,7 +47,7 @@ install:
 build_script:
   - cd /home/appveyor/site
   - git config --global credential.helper store
-  - printf "https://$GITHUB_ACCESS_TOKEN:x-oauth-basic@github.com\n" > $HOME/.git-credentials
+  - printf "https://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:x-oauth-basic@github.com\n" > $HOME/.git-credentials
   - git config --global user.email "userabnormal89@gmail.com"
   - git config --global user.name "AbnormalPoof"
   - cd /home/appveyor/src
