--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ environment:
   HAXE_INSTALLDIR: /home/appveyor/haxe
   SRC_REPO: https://github.com/KadeDev/Kade-Engine.git
   GITHUB_ACCESS_TOKEN:
-    secure: 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
+    secure: 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
 
 install:
   - cd /home/appveyor/site
@@ -47,7 +47,7 @@ install:
 build_script:
   - cd /home/appveyor/site
   - git config --global credential.helper store
-  - printf "https://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:x-oauth-basic@github.com\n" > $HOME/.git-credentials
+  - printf "https://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:x-oauth-basic@github.com\n" > $HOME/.git-credentials
   - git config --global user.email "userabnormal89@gmail.com"
   - git config --global user.name "AbnormalPoof"
   - cd /home/appveyor/src
@@ -57,6 +57,6 @@ build_script:
   - cp -r /home/appveyor/src/export/release/html5/bin /home/appveyor/site/bin
   - mv /home/appveyor/site/bin /home/appveyor/site/nightly
   - git add --all
-  - git commit -m "nightly build through appveyor"
+  - git commit -m "automated kade update"
   - git push
 deploy: off
