--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,7 @@
 name: Nightly Build
 
 # Controls when the workflow will run
-on:
-  schedule:
-  - cron: "0 0 * * *"
+on: push
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
