--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,14 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+        with:  
+          fetch-depth: 0
+          persist-credentials: false
       - uses: krdlab/setup-haxe@v1
         with:
           haxe-version: 4.1.5
       # Runs a set of commands using the runners shell
-      - name: script run line haha
+      - name: script run lime haha
         run: |
           git clone https://github.com/KadeDev/Kade-Engine.git --branch master
           sudo add-apt-repository ppa:haxe/releases -y
@@ -49,9 +52,13 @@ jobs:
           haxelib list
           cd Kade-Engine
           haxelib run lime build html5
-          mv export/release/html5/bin /home/runner/work/fuck
-          cd /home/runner/work/fuck
+          rm -rf /home/runner/work/fuck/nightly
+          mv export/release/html5/bin /home/runner/work/fuck/nightly
+          cd ..
           git config --global user.name AbnormalPoof
-          git config --global user.email 'userabnormal89@gmail.com'
-          git commit -am "Automated kade update"
-          git push
+          git commit -m "automated kade update" -a
+      - name: Push crap lmao
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
