--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,45 +19,18 @@ jobs:
         with:  
           fetch-depth: 0
           persist-credentials: false
-      - uses: krdlab/setup-haxe@v1
-        with:
-          haxe-version: 4.1.5
       # Runs a set of commands using the runners shell
-      - name: script run lime haha
-        run: |
-          git clone https://github.com/KadeDev/Kade-Engine.git --branch master
-          sudo add-apt-repository ppa:haxe/releases -y
-          sudo apt-get update
-          sudo apt-get install gcc-multilib g++-multilib haxe -y
-          mkdir "%HAXELIB_ROOT%"
-          haxelib setup "%HAXELIB_ROOT%"
-          haxelib install lime 7.9.0
-          haxelib install openfl
-          haxelib install flixel
-          haxelib run lime setup flixel
-          haxelib run lime setup
-          haxelib install flixel-tools
-          haxelib install flixel-addons
-          haxelib install flixel-ui
-          haxelib install hscript
-          haxelib install flixel-addons
-          haxelib git faxe https://github.com/uhrobots/faxe
-          haxelib git polymod https://github.com/larsiusprime/polymod.git
-          haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
-          haxelib git extension-webm https://github.com/KadeDev/extension-webm
-          haxelib run lime rebuild extension-webm linux
-          haxelib git linc_luajit https://github.com/MasterEric/linc_luajit.git
-          haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit.git
-          haxelib install actuate 
-          haxelib list
-          cd Kade-Engine
-          haxelib run lime build html5
-          rm -rf /home/runner/work/fuck/nightly
-          mv export/release/html5/bin /home/runner/work/fuck/nightly
-          cd ..
-          git config --global user.name AbnormalPoof
-          git add --all
-          git commit -m "automated kade update" -a
+      - name: script lol
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          github_token: ${{secrets.GITHUB_TOKEN}}
+          workflow: html5.yml
+          workflow_conclusion: success
+          branch: master
+          name: HTML5 Build.zip
+          path: extract_here
+          repo: https://github.com/KadeDev/Kade-Engine
+          check_artifacts:  false
       - name: Push crap
         uses: ad-m/github-push-action@v0.6.0
         with:
