--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Nightly Build
+name: HTML5 Build CI
 
 # Controls when the workflow will run
-on: push
+on: [push, pull_request]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -16,23 +16,41 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-        with:  
-          fetch-depth: 0
-          persist-credentials: false
+      - uses: krdlab/setup-haxe@v1
+        with:
+          haxe-version: 4.1.5
       # Runs a set of commands using the runners shell
-      - name: script lol
-        uses: dawidd6/action-download-artifact@v2
+      - name: script run line haha
+        run: |
+          git clone https://github.com/KadeDev/Kade-Engine.git --branch master
+          sudo add-apt-repository ppa:haxe/releases -y
+          sudo apt-get update
+          sudo apt-get install gcc-multilib g++-multilib haxe -y
+          mkdir "%HAXELIB_ROOT%"
+          haxelib setup "%HAXELIB_ROOT%"
+          haxelib install lime 7.9.0
+          haxelib install openfl
+          haxelib install flixel
+          haxelib run lime setup flixel
+          haxelib run lime setup
+          haxelib install flixel-tools
+          haxelib install flixel-addons
+          haxelib install flixel-ui
+          haxelib install hscript
+          haxelib install flixel-addons
+          haxelib git faxe https://github.com/uhrobots/faxe
+          haxelib git polymod https://github.com/larsiusprime/polymod.git
+          haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
+          haxelib git extension-webm https://github.com/KadeDev/extension-webm
+          haxelib run lime rebuild extension-webm linux
+          haxelib git linc_luajit https://github.com/MasterEric/linc_luajit.git
+          haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit.git
+          haxelib install actuate 
+          haxelib list
+          cd Kade-Engine
+          haxelib run lime build html5
+          
+      - uses: actions/upload-artifact@v2
         with:
-          github_token: ${{secrets.GITHUB_TOKEN}}
-          workflow: html5.yml
-          workflow_conclusion: success
-          branch: master
-          name: HTML5 Build.zip
-          path: extract_here
-          repo: https://github.com/KadeDev/Kade-Engine
-          check_artifacts:  false
-      - name: Push crap
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
+          name: build crap
+          path: export/release/html5/bin
