--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,9 @@
 name: HTML5 Build CI
 
 # Controls when the workflow will run
-on: [push, pull_request]
+on:
+  schedule:
+  - cron: "0 11 * * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
